--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "graphql": "^16.6.0",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "recharts": "^2.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
