--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@chakra-ui/button": "^2.0.9",
+    "@chakra-ui/input": "^2.0.9",
+    "@chakra-ui/layout": "^2.1.6",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.10.2",
@@ -19,6 +22,8 @@
     "mobx-react-lite": "^3.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-chat-ui": "^0.4.0",
+    "react-chat-widget": "^3.1.4",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.3.0",
@@ -26,7 +31,9 @@
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
     "recharts": "^2.1.13",
-    "web-vitals": "^2.1.4"
+    "socket.io-client": "^4.5.1",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
